add full description

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
 <link rel="stylesheet" href="style.css">
 <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
-
+<title>Evgeny Lazuka</title>
 </head>
 <body>
 
@@ -54,17 +54,52 @@
             <div class="lineBlack">
     
             </div>
-            <div class="secondBlock_1">
-                <p>
-                        I am 20 years old. I live in Minsk. A graduate of the "Minsk College of Entrepreneurship" specialty technician-programmer. 
-                        Since childhood, he loved and was interested in everything related to electronics and computers. 
-                        If you need to disassemble or assemble something on a PC, as well as set up Windows or clean your computer from viruses and not only,
-                        feel free to contact me. I love animals, nature. One of my most favorite hobbies are various games. 
-                        And no matter what genre it is, mmo rpg, action game is important that they are made with soul. 
-                        I try to devote all my free time to self-improvement. Read the cult book or understand some interesting task is always happy.
-                </p>
+            <div class="thridBlock_1">
+                <div>
+                        <p><strong>Front-end develop:</strong></p>
+                        <menu>
+                         <li>Always interested in various frameworks<br>Angular,React...</li>
+                         <li>Tried to hone javascript skills</li>
+                         <li>I was interested in various flexible meshes.</li>
+                         <li>Have a practical experience in writing sites <a href="https://darles.000webhostapp.com/">EXAMPLE</a></li>
+                        </menu>
+                         <br>
+                         <p><strong>Back-end develop:</strong></p>
+                         <menu>
+                          <li>Studied various web-services</li>
+                          <li>Web Api 2, MVC, Razor</li>
+                          <li>Principles of database connection</li>
+                          </menu>
+                          <br>
+                </div>
+                <div>
+                        <p><strong>Sport:</strong></p>
+                        <menu>
+                         <li>I love table tennis, if you win me, I will respect you</li>
+                         <li>Excellent swim, I can easily swim the river up and down</li>
+                         <li>Sometimes I play football, interested in MMA and have<br> driver's license category B</li>
+                         </menu>
+                         <br>
+                         <p><strong>PC Games:</strong></p>
+                         <menu>
+                          <li>Dota 2. Tell me who your support is and I will tell you who you are.</li>
+                          <li>Path of Exile. Show me your main stash and the experience of killing bosses.</li>
+                          <li>CS:GO. At one time was the supreme. Now she is bored.</li>
+                          <li>World of Tanks. If you do not lead the red army and you are your own, do<br> not write to me</li>
+                          </menu>
+                </div>
+            </div>
+            <div class="thridBlock_2">
+                    <p><strong>Various programming languages</strong></p>
+                     Pascal<br>
+                     C#,TypeScript<br>
+                     SQL<br>
+                     JavaScript<br>
             </div>
         </div>
+        <br>
+        <br>
+        <p style="text-align: end;">P.S. Скилла не хватает, так что не спрашивайте меня зачем я пошел на курсы в EPAM <strong>(*з*)</strong></p>
 
         </div>
         <script type="text/javascript">
