--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
 <link rel="stylesheet" href="style.css">
 <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
-<title>Evgeny Lazuka</title>
+<title>Eugene Lazuka</title>
 </head>
 <body>
 
     <nav class="navbar navbar-dark bg-dark" id="menu">
-        <a class="navbar-brand" href="#">LAZUKA EVGENY</a>
+        <a class="navbar-brand" href="#">LAZUKA EUGENE</a>
         <a class="navbar-brand" href="#ex1">ABOUT ME/INTERESTS</a>
     </nav>
     <div class="firstBlock">
