--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         </div>
         <div>
             <h1>
-                Lazuka Evgeny Sergeevich
+                Lazuka Eugene Sergeevich
             </h1>
         </div>
         <div class="line">
