--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             <br>
             <div class="thridBlock_1">
                 <div>
-                        <p><strong>Front-end develop:</strong></p>
+                        <p><strong>Front-end develop</strong></p>
                         <menu>
                          <li>Always interested in various frameworks<br>Angular,React...</li>
                          <li>Tried to hone javascript skills</li>
@@ -64,7 +64,7 @@
                          <li>Have a practical experience in writing sites <a href="https://darles.000webhostapp.com/">EXAMPLE</a></li>
                         </menu>
                          <br>
-                         <p><strong>Back-end develop:</strong></p>
+                         <p><strong>Back-end develop</strong></p>
                          <menu>
                           <li>Studied various web-services</li>
                           <li>Web Api 2, MVC, Razor</li>
@@ -73,14 +73,14 @@
                           <br>
                 </div>
                 <div>
-                        <p><strong>Sport:</strong></p>
+                        <p><strong>Sport</strong></p>
                         <menu>
                          <li>I love table tennis, if you win me, I will respect you</li>
                          <li>Excellent swim, I can easily swim the river up and down</li>
                          <li>Sometimes I play football, interested in MMA and have<br> driver's license category B</li>
                          </menu>
                          <br>
-                         <p><strong>PC Games:</strong></p>
+                         <p><strong>PC Games</strong></p>
                          <menu>
                           <li>Dota 2. Tell me who your support is and I will tell you who you are.</li>
                           <li>Path of Exile. Show me your main stash and the experience of killing bosses.</li>
@@ -100,8 +100,19 @@
         <br>
         <br>
         <p style="text-align: end;">P.S. Скилла не хватает, так что не спрашивайте меня зачем я пошел на курсы в EPAM <strong>(*з*)</strong></p>
+    </div>
+    <div class="fourBlock">
+        <div>
+            <h2>Complete Tasks</h2>
+            <menu>
+                <li><a href="https://github.com/lesnoyleo/FancyCalc"> FancyCalculator</a> </li>
+                <li><a href="https://github.com/lesnoyleo/PadawansTask1"> PadawansTask1</a> </li>
+                <li><a href="https://github.com/lesnoyleo/PadawansTask2"> PadawansTask2</a> </li>
+            </menu>
+                
 
         </div>
+    </div>
         <script type="text/javascript">
             $(document).ready(function(){
                 $("#menu").on("click","a", function (event) {
