--- a/index.html
+++ b/index.html
@@ -108,6 +108,7 @@
                 <li><a href="https://github.com/lesnoyleo/FancyCalc"> FancyCalculator</a> </li>
                 <li><a href="https://github.com/lesnoyleo/PadawansTask1"> PadawansTask1</a> </li>
                 <li><a href="https://github.com/lesnoyleo/PadawansTask2"> PadawansTask2</a> </li>
+                <li><a href="https://github.com/lesnoyleo/PadawansTask3"> PadawansTask3</a> </li>
             </menu>
                 
 
