add some padawansTasks

--- a/index.html
+++ b/index.html
@@ -109,6 +109,9 @@
                 <li><a href="https://github.com/lesnoyleo/PadawansTask1"> PadawansTask1</a> </li>
                 <li><a href="https://github.com/lesnoyleo/PadawansTask2"> PadawansTask2</a> </li>
                 <li><a href="https://github.com/lesnoyleo/PadawansTask3"> PadawansTask3</a> </li>
+                <li><a href="https://github.com/lesnoyleo/PadawansTask4"> PadawansTask4</a> </li>
+                <li><a href="https://github.com/lesnoyleo/PadawansTask5"> PadawansTask5</a> </li>
+                <li><a href="https://github.com/lesnoyleo/PadawansTask6"> PadawansTask6</a> </li>
             </menu>
                 
 
