--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
                         <menu>
                          <li>Always interested in various frameworks<br>Angular,React...</li>
                          <li>Tried to hone javascript skills</li>
+                         <li>HTML CSS, so ez for me</li>
                          <li>I was interested in various flexible meshes.</li>
                          <li>Have a practical experience in writing sites <a href="https://darles.000webhostapp.com/">EXAMPLE</a></li>
                         </menu>
