add more information

--- a/index.html
+++ b/index.html
@@ -114,10 +114,27 @@
                 <li><a href="https://github.com/lesnoyleo/PadawansTask5"> PadawansTask5</a> </li>
                 <li><a href="https://github.com/lesnoyleo/PadawansTask6"> PadawansTask6</a> </li>
             </menu>
-                
+        </div>
+        <div class="verticalLine">
 
         </div>
+        <div>
+            <h2>Complete Tasks</h2>
+            <menu>
+                <li><a href="https://github.com/lesnoyleo/PadawansTask7"> PadawansTask  7</a></li>
+                <li><a href="https://github.com/lesnoyleo/PadawansTask8"> PadawansTask  8</a> </li>
+                <li><a href="https://github.com/lesnoyleo/PadawansTask9"> PadawansTask  9</a> </li>
+                <li><a href="https://github.com/lesnoyleo/PadawansTask10"> PadawansTask10</a> </li>
+                <li><a href="https://github.com/lesnoyleo/PadawansTask11"> PadawansTask11</a> </li>
+                <li><a href="https://github.com/lesnoyleo/PadawansTask12"> PadawansTask12</a> </li>
+                <li><a href="https://github.com/lesnoyleo/PadawansTask13"> PadawansTask13</a> </li>
+            </menu>
+        </div>
     </div>
+    <div class="fiveBlock">
+            <a href="https://www.codewars.com/users/lesnoy_leo"><img src="https://courses.softlab.ntua.gr/Images/Various/codewars.png" alt="MyFace" border="0"></a>
+            <h2>⇐⇐⇐ Codewars Link</h2>
+        </div>
         <script type="text/javascript">
             $(document).ready(function(){
                 $("#menu").on("click","a", function (event) {
