upload final project

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </nav>
     <div class="firstBlock">
         <div class="myFace">
-                <a href="https://ibb.co/wJW6Jrf"><img src="https://i.ibb.co/wJW6Jrf/MyFace.jpg" alt="MyFace" border="0"></a>
+                <a href="https://vk.com/lesnoyleo"><img src="https://i.ibb.co/wJW6Jrf/MyFace.jpg" alt="MyFace" border="0"></a>
         </div>
         <div>
             <h1>
@@ -129,6 +129,11 @@
                 <li><a href="https://github.com/lesnoyleo/PadawansTask12"> PadawansTask12</a> </li>
                 <li><a href="https://github.com/lesnoyleo/PadawansTask13"> PadawansTask13</a> </li>
             </menu>
+        </div>
+    </div>
+    <div class="ticTacToe">
+        <div>
+            <h2><a href="https://github.com/lesnoyleo/tic-tac-toe">Link on Tic Tac Toe project!!!</a></h2>
         </div>
     </div>
     <div class="fiveBlock">
