--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                          <br>
                          <p><strong>PC Games</strong></p>
                          <menu>
-                          <li>Dota 2. Tell me who your support is and I will tell you who you are.</li>
+                          <li>Dota 2. Tell me whoes your support and I will tell you who you are.</li>
                           <li>Path of Exile. Show me your main stash and the experience of killing bosses.</li>
                           <li>CS:GO. At one time was the supreme. Now she is bored.</li>
                           <li>World of Tanks. If you do not lead the red army and you are your own, do<br> not write to me</li>
