--- a/index.html
+++ b/index.html
@@ -2,160 +2,9 @@
 <html>
 <head>
 <meta charset="utf-8">
-<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
-<link rel="stylesheet" href="style.css">
-<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
 <title>Eugene Lazuka</title>
 </head>
 <body>
-
-    <nav class="navbar navbar-dark bg-dark" id="menu">
-        <a class="navbar-brand" href="#">LAZUKA EUGENE</a>
-        <a class="navbar-brand" href="#ex1">ABOUT ME/INTERESTS</a>
-    </nav>
-    <div class="firstBlock">
-        <div class="myFace">
-                <a href="https://vk.com/lesnoyleo"><img src="https://i.ibb.co/wJW6Jrf/MyFace.jpg" alt="MyFace" border="0"></a>
-        </div>
-        <div>
-            <h1>
-                Lazuka Eugene Sergeevich
-            </h1>
-        </div>
-        <div class="line">
-        </div>
-    </div>
-        <div class="secondBlock" id="ex1">
-            <div>
-                <h4>
-                    ABOUT ME
-                </h4>
-            </div>
-            <div class="lineBlack" >
-            </div>
-            <div class="secondBlock_1">
-                <p>
-                        I am 20 years old. I live in Minsk. A graduate of the "Minsk College of Entrepreneurship" specialty technician-programmer. 
-                        Since childhood, he loved and was interested in everything related to electronics and computers. 
-                        If you need to disassemble or assemble something on a PC, as well as set up Windows or clean your computer from viruses and not only,
-                        feel free to contact me. I love animals, nature. One of my most favorite hobbies are various games. 
-                        And no matter what genre it is, mmo rpg, action game is important that they are made with soul. 
-                        I try to devote all my free time to self-improvement. Read the cult book or understand some interesting task is always happy.
-                </p>
-            </div>
-    </div>            
-   <br>
-    <div class="thridBlock" >
-            <div>
-                <h4>
-                    INTERESTS
-                </h4>
-            </div>
-            <div class="lineBlack">
-            </div>
-            <br>
-            <div class="thridBlock_1">
-                <div>
-                        <p><strong>Front-end develop</strong></p>
-                        <menu>
-                         <li>Always interested in various frameworks<br>Angular,React...</li>
-                         <li>Tried to hone javascript skills</li>
-                         <li>HTML CSS, so ez for me</li>
-                         <li>I was interested in various flexible meshes.</li>
-                         <li>Have a practical experience in writing sites <a href="https://darles.000webhostapp.com/">EXAMPLE</a></li>
-                        </menu>
-                         <br>
-                         <p><strong>Back-end develop</strong></p>
-                         <menu>
-                          <li>Studied various web-services</li>
-                          <li>Web Api 2, MVC, Razor</li>
-                          <li>Principles of database connection</li>
-                          </menu>
-                          <br>
-                </div>
-                <div>
-                        <p><strong>Sport</strong></p>
-                        <menu>
-                         <li>I love table tennis, if you win me, I will respect you</li>
-                         <li>Excellent swim, I can easily swim the river up and down</li>
-                         <li>Sometimes I play football, interested in MMA and have<br> driver's license category B</li>
-                         </menu>
-                         <br>
-                         <p><strong>PC Games</strong></p>
-                         <menu>
-                          <li>Dota 2. Tell me whos your support and I will tell you who you are.</li>
-                          <li>Path of Exile. Show me your main stash and the experience of killing bosses.</li>
-                          <li>CS:GO. At one time was the supreme. Now she is bored.</li>
-                          <li>World of Tanks. If you do not lead the red army and you are your own, do<br> not write to me</li>
-                          </menu>
-                </div>
-            </div>
-            <div class="thridBlock_2">
-                    <p><strong>Various programming languages</strong></p>
-                     Pascal<br>
-                     C#,TypeScript<br>
-                     SQL<br>
-                     JavaScript<br>
-            </div>
-        </div>
-        <br>
-        <br>
-        <p style="text-align: end;">P.S. Скилла не хватает, так что не спрашивайте меня зачем я пошел на курсы в EPAM <strong>(*з*)</strong></p>
-    </div>
-    <div class="fourBlock">
-        <div>
-            <h2>Complete Tasks</h2>
-            <menu>
-                <li><a href="https://github.com/lesnoyleo/FancyCalc"> FancyCalculator</a> </li>
-                <li><a href="https://github.com/lesnoyleo/PadawansTask1"> PadawansTask1</a> </li>
-                <li><a href="https://github.com/lesnoyleo/PadawansTask2"> PadawansTask2</a> </li>
-                <li><a href="https://github.com/lesnoyleo/PadawansTask3"> PadawansTask3</a> </li>
-                <li><a href="https://github.com/lesnoyleo/PadawansTask4"> PadawansTask4</a> </li>
-                <li><a href="https://github.com/lesnoyleo/PadawansTask5"> PadawansTask5</a> </li>
-                <li><a href="https://github.com/lesnoyleo/PadawansTask6"> PadawansTask6</a> </li>
-            </menu>
-        </div>
-        <div class="verticalLine">
-
-        </div>
-        <div>
-            <h2>Complete Tasks</h2>
-            <menu>
-                <li><a href="https://github.com/lesnoyleo/PadawansTask7"> PadawansTask  7</a></li>
-                <li><a href="https://github.com/lesnoyleo/PadawansTask8"> PadawansTask  8</a> </li>
-                <li><a href="https://github.com/lesnoyleo/PadawansTask9"> PadawansTask  9</a> </li>
-                <li><a href="https://github.com/lesnoyleo/PadawansTask10"> PadawansTask10</a> </li>
-                <li><a href="https://github.com/lesnoyleo/PadawansTask11"> PadawansTask11</a> </li>
-                <li><a href="https://github.com/lesnoyleo/PadawansTask12"> PadawansTask12</a> </li>
-                <li><a href="https://github.com/lesnoyleo/PadawansTask13"> PadawansTask13</a> </li>
-            </menu>
-        </div>
-    </div>
-    <div class="ticTacToe">
-        <div>
-            <h2><a href="https://github.com/lesnoyleo/tic-tac-toe">Link on Tic Tac Toe project!!!</a></h2>
-        </div>
-    </div>
-    <div class="fiveBlock">
-            <a href="https://www.codewars.com/users/lesnoy_leo"><img src="https://courses.softlab.ntua.gr/Images/Various/codewars.png" alt="MyFace" border="0"></a>
-            <h2>⇐⇐⇐ Codewars Link</h2>
-        </div>
-        <script type="text/javascript">
-            $(document).ready(function(){
-                $("#menu").on("click","a", function (event) {
-                    //отменяем стандартную обработку нажатия по ссылке
-                    event.preventDefault();
-
-                    //забираем идентификатор бока с атрибута href
-                    var id  = $(this).attr('href'),
-
-                    //узнаем высоту от начала страницы до блока на который ссылается якорь
-                        top = $(id).offset().top;
-                    
-                    //анимируем переход на расстояние - top за 1500 мс
-                    $('body,html').animate({scrollTop: top}, 1000);
-	                });
-                });
-        </script>   
+	<h1>Test</h1>
 </body>
 </html>
