--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html>
-<html>
-<head>
-<meta charset="utf-8">
-<title>Eugene Lazuka</title>
-</head>
-<body>
-	<h1>Test</h1>
-</body>
-</html>
+<h1>HTML5 Accelerometer</h1>
+
+<section>
+Accelerometer detected? <span id="acc"></span><br>
+alpha X: <input type="text" readonly id="x" value="" /><br>
+alpha Y: <input type="text" readonly id="y" value="" /><br>
+alpha Z: <input type="text" readonly id="z" value="" /><br>
+</section>
+
+<div id="block">↑</div>
