--- a/index.html
+++ b/index.html
@@ -1,10 +1,19 @@
-<h1>HTML5 Accelerometer</h1>
+<html>
+<head>
+    <link href="style.css" rel="stylesheet">
+    <script src="script.js"></script>
+</head>
+<body>
+    <h1>HTML5 Accelerometer</h1>
 
-<section>
-Accelerometer detected? <span id="acc"></span><br>
-alpha X: <input type="text" readonly id="x" value="" /><br>
-alpha Y: <input type="text" readonly id="y" value="" /><br>
-alpha Z: <input type="text" readonly id="z" value="" /><br>
-</section>
+    <section>
+        Accelerometer detected? <span id="acc"></span><br>
+        alpha X: <input type="text" readonly id="x" value="" /><br>
+        alpha Y: <input type="text" readonly id="y" value="" /><br>
+        alpha Z: <input type="text" readonly id="z" value="" /><br>
+    </section>
 
-<div id="block">↑</div>
+    <div id="block">↑</div>
+</body>
+</html>
+
