--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
 <head>
     <link href="style.css" rel="stylesheet">
+    <title>test</title>
 </head>
 <body>
     <h1>HTML5 Accelerometer</h1>
