--- a/index.html
+++ b/index.html
@@ -1,16 +1,16 @@
 ﻿<html>
 <head>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="style.css">
     <title>test</title>
 </head>
 <body>
-    <nav class="navbar navbar-dark bg-dark" id="menu">
-        <a class="navbar-brand" href="#">LAZUKA EUGENE</a>
-        <a class="navbar-brand" href="#ex1">ABOUT ME/INTERESTS</a>
+    <nav class="header">
+        <a href="#ex1">ABOUT ME/INTERESTS</a>
     </nav>
     <div class="firstBlock">
         <div class="myFace">
-                <a href="https://ibb.co/wJW6Jrf"><img src="https://i.ibb.co/wJW6Jrf/MyFace.jpg" alt="MyFace" border="0"></a>
+            <a href="https://ibb.co/wJW6Jrf"><img src="https://i.ibb.co/wJW6Jrf/MyFace.jpg" alt="MyFace" border="0"></a>
         </div>
         <div>
             <h1>
@@ -129,6 +129,9 @@
     <div class="fiveBlock">
         <a href="https://www.codewars.com/users/lesnoy_leo"><img src="https://courses.softlab.ntua.gr/Images/Various/codewars.png" alt="MyFace" border="0"></a>
         <h2>⇐⇐⇐ Codewars Link</h2>
+    </div>
+    <div class="go-to-top">
+        <a href="#">↑</a>
     </div>
 </body>
 </html>
