change description about me. Add matrix backgorund

--- a/index.html
+++ b/index.html
@@ -1,50 +1,55 @@
 ﻿<html>
 <head>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="style.css">
     <title>test</title>
 </head>
 <body>
     <nav class="header">
-        <a href="#ex1">ABOUT ME/INTERESTS</a>
+        <a href="#ex1">ABOUT ME /</a>
+        <a href="#ex2">INTERESTS</a>
+
     </nav>
+    <div class="header-with-matrix">
+    <canvas id='canvas'></canvas>
     <div class="firstBlock">
         <div class="myFace">
-            <a href="https://ibb.co/wJW6Jrf"><img src="https://i.ibb.co/wJW6Jrf/MyFace.jpg" alt="MyFace" border="0"></a>
+            <a href="https://www.linkedin.com/in/eugene-lazuka-8906561b7/"><img src="https://i.ibb.co/wJW6Jrf/MyFace.jpg" alt="MyFace" border="0"></a>
         </div>
         <div>
             <h1>
-                Lazuka Eugene Sergeevich
+                Lazuka Eugene
             </h1>
         </div>
         <div class="line">
         </div>
     </div>
-        <div class="secondBlock" id="ex1">
-            <div>
-                <h4>
+    </div>
+    
+    <div class="secondBlock" id="ex1">
+            <div class="d-flex">
+                <h1>
                     ABOUT ME
-                </h4>
+                </h1>
             </div>
             <div class="lineBlack" >
             </div>
             <div class="secondBlock_1">
                 <p>
-                        I am 20 years old. I live in Minsk. A graduate of the "Minsk College of Entrepreneurship" specialty technician-programmer. 
-                        Since childhood, he loved and was interested in everything related to electronics and computers. 
+                        I am 23 years old. Live in Minsk. A graduate of the "Minsk College of Entrepreneurship" specialty technician-programmer. 
+                        Since childhood, was loved and interested in everything related to electronics and computers. 
                         If you need to disassemble or assemble something on a PC, as well as set up Windows or clean your computer from viruses and not only,
-                        feel free to contact me. I love animals, nature. One of my most favorite hobbies are various games. 
+                        my door is open. I love animals, nature. One of my most favorite hobbies are various games. 
                         And no matter what genre it is, mmo rpg, action game is important that they are made with soul. 
-                        I try to devote all my free time to self-improvement. Read the cult book or understand some interesting task is always happy.
+                        I try to devote all my free time to self-improvement. Read the cult book or investigate some interesting tasks is always cool.
                 </p>
             </div>
     </div>            
    <br>
-    <div class="thridBlock" >
-            <div>
-                <h4>
+    <div class="thridBlock" id="ex2">
+            <div class="d-flex">
+                <h1>
                     INTERESTS
-                </h4>
+                </h1>
             </div>
             <div class="lineBlack">
             </div>
@@ -76,38 +81,33 @@
                          <li>Sometimes I play football, interested in MMA and have<br> driver's license category B</li>
                          </menu>
                          <br>
-                         <p><strong>PC Games</strong></p>
+                         <p><strong>Right Now...</strong></p>
                          <menu>
-                          <li>Dota 2. Tell me who your support is and I will tell you who you are.</li>
-                          <li>Path of Exile. Show me your main stash and the experience of killing bosses.</li>
-                          <li>CS:GO. At one time was the supreme. Now she is bored.</li>
-                          <li>World of Tanks. If you do not lead the red army and you are your own, do<br> not write to me</li>
+                          <li>Front end Developer in ELINEXT company. Locate in Belarus.
+                            Outsource. 1 year experience. JIRA, GIT, E2E, UNIT, RxJS</li>
                           </menu>
                 </div>
             </div>
             <div class="thridBlock_2">
                     <p><strong>Various programming languages</strong></p>
-                     Pascal<br>
                      C#,TypeScript<br>
                      SQL<br>
                      JavaScript<br>
+                     <p><strong>Middle of Angular Framework💪</strong></p>
             </div>
         </div>
-        <br>
-        <br>
-        <p style="text-align: end;">P.S. Скилла не хватает, так что не спрашивайте меня зачем я пошел на курсы в EPAM <strong>(*з*)</strong></p>
     </div>
     <div class="fourBlock">
         <div>
             <h2>Complete Tasks</h2>
             <menu>
                 <li><a href="https://github.com/lesnoyleo/FancyCalc"> FancyCalculator</a> </li>
-                <li><a href="https://github.com/lesnoyleo/PadawansTask1"> PadawansTask1</a> </li>
-                <li><a href="https://github.com/lesnoyleo/PadawansTask2"> PadawansTask2</a> </li>
-                <li><a href="https://github.com/lesnoyleo/PadawansTask3"> PadawansTask3</a> </li>
-                <li><a href="https://github.com/lesnoyleo/PadawansTask4"> PadawansTask4</a> </li>
-                <li><a href="https://github.com/lesnoyleo/PadawansTask5"> PadawansTask5</a> </li>
-                <li><a href="https://github.com/lesnoyleo/PadawansTask6"> PadawansTask6</a> </li>
+                <li><a href="https://github.com/lesnoyleo/PadawansTask1"> PadawansTask 1</a> </li>
+                <li><a href="https://github.com/lesnoyleo/PadawansTask2"> PadawansTask 2</a> </li>
+                <li><a href="https://github.com/lesnoyleo/PadawansTask3"> PadawansTask 3</a> </li>
+                <li><a href="https://github.com/lesnoyleo/PadawansTask4"> PadawansTask 4</a> </li>
+                <li><a href="https://github.com/lesnoyleo/PadawansTask5"> PadawansTask 5</a> </li>
+                <li><a href="https://github.com/lesnoyleo/PadawansTask6"> PadawansTask 6</a> </li>
             </menu>
         </div>
         <div class="verticalLine">
@@ -116,13 +116,13 @@
         <div>
             <h2>Complete Tasks</h2>
             <menu>
-                <li><a href="https://github.com/lesnoyleo/PadawansTask7"> PadawansTask  7</a></li>
-                <li><a href="https://github.com/lesnoyleo/PadawansTask8"> PadawansTask  8</a> </li>
-                <li><a href="https://github.com/lesnoyleo/PadawansTask9"> PadawansTask  9</a> </li>
-                <li><a href="https://github.com/lesnoyleo/PadawansTask10"> PadawansTask10</a> </li>
-                <li><a href="https://github.com/lesnoyleo/PadawansTask11"> PadawansTask11</a> </li>
-                <li><a href="https://github.com/lesnoyleo/PadawansTask12"> PadawansTask12</a> </li>
-                <li><a href="https://github.com/lesnoyleo/PadawansTask13"> PadawansTask13</a> </li>
+                <li><a href="https://github.com/lesnoyleo/PadawansTask7"> PadawansTask 7</a></li>
+                <li><a href="https://github.com/lesnoyleo/PadawansTask8"> PadawansTask 8</a> </li>
+                <li><a href="https://github.com/lesnoyleo/PadawansTask9"> PadawansTask 9</a> </li>
+                <li><a href="https://github.com/lesnoyleo/PadawansTask10"> PadawansTask 10</a> </li>
+                <li><a href="https://github.com/lesnoyleo/PadawansTask11"> PadawansTask 11</a> </li>
+                <li><a href="https://github.com/lesnoyleo/PadawansTask12"> PadawansTask 12</a> </li>
+                <li><a href="https://github.com/lesnoyleo/PadawansTask13"> PadawansTask 13</a> </li>
             </menu>
         </div>
     </div>
@@ -133,5 +133,6 @@
     <div class="go-to-top">
         <a href="#">↑</a>
     </div>
+    <script src="script.js"></script>
 </body>
 </html>
